[gd_scene load_steps=23 format=3 uid="uid://bpdrpg3p4qn3t"]

[ext_resource type="Script" uid="uid://brb5gkpqd4t4u" path="res://Scenes/GameWorld/StageHandler.gd" id="1_hrf5g"]
[ext_resource type="Shader" uid="uid://nvi83umqwl1n" path="res://Scenes/GameWorld/PostProcessing.gdshader" id="1_v4p10"]
[ext_resource type="Script" uid="uid://b63oyvubiyltp" path="res://Scenes/GameWorld/GameSubViewportContainer.gd" id="2_ryftk"]
[ext_resource type="PackedScene" uid="uid://4trc0xhmaen" path="res://Classes/ChipHolder/ChipHolder.tscn" id="2_v4p10"]
[ext_resource type="PackedScene" uid="uid://vj4n1f7bc5hh" path="res://Scenes/Lobby/Lobby.tscn" id="3_q76ww"]
[ext_resource type="PackedScene" uid="uid://bu6qub506i5vu" path="res://Classes/BetDisplay/BetDisplaySimple.tscn" id="4_yresm"]
[ext_resource type="PackedScene" uid="uid://ckp8t2lxcltg3" path="res://Scenes/Arena/Arena.tscn" id="5_ryftk"]
[ext_resource type="Environment" uid="uid://dh2efkygayqvn" path="res://Scenes/Arena/arenaEnvironment.tres" id="6_l7hxi"]
[ext_resource type="Script" uid="uid://b2x2hh13chxg7" path="res://Scenes/GameWorld/GameWorldEnvironment.gd" id="7_vvqcd"]
[ext_resource type="PackedScene" uid="uid://bh13re66e6e63" path="res://Classes/MultipleResCamera/MultipleResCamera.tscn" id="8_ahv6l"]
[ext_resource type="PackedScene" uid="uid://c1u8x43c7ulq1" path="res://Scenes/PauseMenu/PauseMenu.tscn" id="9_obf4j"]
[ext_resource type="PackedScene" uid="uid://bww4tl6fwi7k" path="res://Classes/BetHUD/BetHUD.tscn" id="10_8foli"]
[ext_resource type="PackedScene" uid="uid://dij606wt530ut" path="res://Scenes/GameWorld/Camara.glb" id="12_q76ww"]
[ext_resource type="Script" uid="uid://dqvifl2io4eoy" path="res://Common/Hover.gd" id="13_yresm"]
[ext_resource type="PackedScene" uid="uid://drq6epvfqxecn" path="res://Scenes/NewBetShow/NewBetShow.tscn" id="15_l7hxi"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_q76ww"]
shader = ExtResource("1_v4p10")
shader_parameter/fishEyeAmount = 4.0
shader_parameter/grain_amount = 0.030000001425
shader_parameter/grain_size = 0.90000003949012

[sub_resource type="Curve3D" id="Curve3D_vimpm"]
resource_local_to_scene = true
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -5.817695, 1.691425, 3.305704, 0, 0, 0, 0, 0, 0, -5.8424706, 1.7068079, -3.43518),
"tilts": PackedFloat32Array(0, 0)
}
point_count = 2

[sub_resource type="Curve3D" id="Curve3D_yresm"]
resource_local_to_scene = true
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -5.817695, 1.691425, 3.305704, 0, 0, 0, 0, 0, 0, -5.8424706, 1.7068079, -3.43518),
"tilts": PackedFloat32Array(0, 0)
}
point_count = 2

[sub_resource type="Curve3D" id="Curve3D_ryftk"]
resource_local_to_scene = true
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -5.817695, 1.691425, 3.305704, 0, 0, 0, 0, 0, 0, -5.8424706, 1.7068079, -3.43518),
"tilts": PackedFloat32Array(0, 0)
}
point_count = 2

[sub_resource type="Curve3D" id="Curve3D_l7hxi"]
resource_local_to_scene = true
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -5.817695, 1.691425, 3.305704, 0, 0, 0, 0, 0, 0, -5.8424706, 1.7068079, -3.43518),
"tilts": PackedFloat32Array(0, 0)
}
point_count = 2

[sub_resource type="Curve3D" id="Curve3D_vvqcd"]
resource_local_to_scene = true
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -5.817695, 1.691425, 3.305704, 0, 0, 0, 0, 0, 0, -5.8424706, 1.7068079, -3.43518),
"tilts": PackedFloat32Array(0, 0)
}
point_count = 2

[sub_resource type="Curve3D" id="Curve3D_ahv6l"]
resource_local_to_scene = true
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -5.817695, 1.691425, 3.305704, 0, 0, 0, 0, 0, 0, -5.8424706, 1.7068079, -3.43518),
"tilts": PackedFloat32Array(0, 0)
}
point_count = 2

[node name="SubViewportContainer" type="SubViewportContainer"]
process_mode = 3
material = SubResource("ShaderMaterial_q76ww")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_target = true
script = ExtResource("2_ryftk")

[node name="SubViewport" type="SubViewport" parent="."]
handle_input_locally = false
audio_listener_enable_2d = true
audio_listener_enable_3d = true
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="StageHandler" type="Node3D" parent="SubViewport" node_paths=PackedStringArray("arena", "lobby", "chipHolder", "betDisplay", "camera", "betCamera", "leaderboardCamera", "arenaCamera") groups=["StageHandler"]]
process_mode = 1
script = ExtResource("1_hrf5g")
arena = NodePath("Arena")
lobby = NodePath("Lobby")
chipHolder = NodePath("ChipHolder")
betDisplay = NodePath("BetDisplaySimple")
camera = NodePath("MultipleResCamera")
betCamera = NodePath("ChipHolder/BetSceneCamera")
leaderboardCamera = NodePath("BetDisplaySimple/LeaderboardCamera")
arenaCamera = NodePath("Arena/ArenaCamera")

[node name="ChipHolder" parent="SubViewport/StageHandler" node_paths=PackedStringArray("camera", "worldEnvironment") instance=ExtResource("2_v4p10")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.348, -15.0314)
camera = NodePath("../MultipleResCamera")
worldEnvironment = NodePath("../WorldEnvironment")

[node name="BetSceneCamera" type="Camera3D" parent="SubViewport/StageHandler/ChipHolder"]
transform = Transform3D(1, 0, 0, 0, 0.798636, 0.601815, 0, -0.601815, 0.798636, 0, 6.30425, 11.3)
cull_mask = 1048573
fov = 47.0

[node name="Lobby" parent="SubViewport/StageHandler" node_paths=PackedStringArray("mainCamera") instance=ExtResource("3_q76ww")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.1, -29.420048)
mainCamera = NodePath("../MultipleResCamera")

[node name="BetDisplaySimple" parent="SubViewport/StageHandler" node_paths=PackedStringArray("chipHolder", "stageHandler") instance=ExtResource("4_yresm")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, -9.40732)
chipHolder = NodePath("../ChipHolder")
stageHandler = NodePath("..")

[node name="LeaderboardCamera" type="Camera3D" parent="SubViewport/StageHandler/BetDisplaySimple"]
transform = Transform3D(1, 0, 0, 0, 0.945853, 0.324594, 0, -0.324594, 0.945853, 0, 4.60326, 3.03699)
fov = 47.0

[node name="Arena" parent="SubViewport/StageHandler" node_paths=PackedStringArray("stageHandler", "multipleResCamera", "environment") instance=ExtResource("5_ryftk")]
stageHandler = NodePath("..")
multipleResCamera = NodePath("../MultipleResCamera")
environment = NodePath("../WorldEnvironment")

[node name="AudienceRow" parent="SubViewport/StageHandler/Arena/Audience" index="0"]
curve = SubResource("Curve3D_vimpm")

[node name="AudienceRow2" parent="SubViewport/StageHandler/Arena/Audience" index="1"]
curve = SubResource("Curve3D_yresm")

[node name="AudienceRow3" parent="SubViewport/StageHandler/Arena/Audience" index="2"]
curve = SubResource("Curve3D_ryftk")

[node name="AudienceRow4" parent="SubViewport/StageHandler/Arena/Audience" index="3"]
curve = SubResource("Curve3D_l7hxi")

[node name="AudienceRow5" parent="SubViewport/StageHandler/Arena/Audience" index="4"]
curve = SubResource("Curve3D_vvqcd")

[node name="AudienceRow6" parent="SubViewport/StageHandler/Arena/Audience" index="5"]
curve = SubResource("Curve3D_ahv6l")

[node name="ArenaCamera" type="Camera3D" parent="SubViewport/StageHandler/Arena"]
transform = Transform3D(1, 0, 0, 0, 0.419293, 0.907851, 0, -0.907851, 0.419293, 2.0504e-05, 8.924157, 4.157646)
environment = ExtResource("6_l7hxi")
current = true
fov = 47.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="SubViewport/StageHandler" node_paths=PackedStringArray("controllingLights")]
environment = ExtResource("6_l7hxi")
script = ExtResource("7_vvqcd")
controllingLights = [null]

[node name="GlobalLight" type="DirectionalLight3D" parent="SubViewport/StageHandler/WorldEnvironment"]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 5.48156, 7)
visible = false
light_color = Color(1, 1, 0.745098, 1)
light_energy = 0.2
directional_shadow_mode = 0

[node name="MultipleResCamera" parent="SubViewport/StageHandler" instance=ExtResource("8_ahv6l")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.294457, 0.955665, 0, -0.955665, 0.294457, 1.90735e-05, 8.19389, 2.9289)
cull_mask = 1048575
startGameAnimationTime = 0.2

[node name="PauseMenu" parent="SubViewport/StageHandler" instance=ExtResource("9_obf4j")]
visible = false

[node name="BetHUD" parent="SubViewport/StageHandler" instance=ExtResource("10_8foli")]
visible = false

[node name="Camara" parent="SubViewport/StageHandler" instance=ExtResource("12_q76ww")]
transform = Transform3D(-0.27254266, 0, -2.3826436e-08, 0, 0.27254266, 0, 2.3826436e-08, 0, -0.27254266, 10.000378, -1.5759306, 0)
script = ExtResource("13_yresm")
yDisplacement = 0.2
frequency = 4.0

[node name="PivoteCamara" parent="SubViewport/StageHandler/Camara" index="1"]
transform = Transform3D(1.3803834, 0.40242746, -4.6317155e-09, -0.3698726, 1.5018798, -3.5181323e-08, -4.2570463e-09, 3.5181323e-08, 1.5548605, -4.538849, 1.3251228, -3.9679844e-07)

[node name="Camara2" parent="SubViewport/StageHandler" instance=ExtResource("12_q76ww")]
transform = Transform3D(0.27254266, 0, 0, 0, 0.27254266, 0, 0, 0, 0.27254266, -10, -1.576, 0)
script = ExtResource("13_yresm")
yDisplacement = 0.2
frequency = 4.0

[node name="PivoteCamara" parent="SubViewport/StageHandler/Camara2" index="1"]
transform = Transform3D(1.3803834, 0.40242746, -4.6317155e-09, -0.3698726, 1.5018798, -3.5181323e-08, -4.2570463e-09, 3.5181323e-08, 1.5548605, -4.538849, 1.3251228, -3.9679844e-07)

[node name="NewBetShow" parent="SubViewport/StageHandler" instance=ExtResource("15_l7hxi")]
transform = Transform3D(-4.371139e-08, 0, 1, 0, 1, 0, -1, 0, -4.371139e-08, -21, 0, -12)

[node name="SpotLight3D" type="SpotLight3D" parent="SubViewport/StageHandler/NewBetShow"]
transform = Transform3D(1, 2.1855685e-08, 5.856215e-09, -2.1855685e-08, 0.86602545, 0.5, 5.8562115e-09, -0.5, 0.86602545, -9.536743e-07, 7.371884, 12.727475)
visible = false
light_color = Color(1, 1, 0.7764706, 1)
light_energy = 14.0
light_bake_mode = 1
spot_range = 17.4037
spot_angle = 25.662882

[connection signal="inArena" from="SubViewport/StageHandler" to="SubViewport/StageHandler/BetHUD" method="showBetName"]
[connection signal="inLeaderboard" from="SubViewport/StageHandler" to="SubViewport/StageHandler/BetHUD" method="reset"]

[editable path="SubViewport/StageHandler/Arena"]
[editable path="SubViewport/StageHandler/Camara"]
[editable path="SubViewport/StageHandler/Camara2"]
